refactor(server): improve AI plugin idiomaticity based on TanStack AI reference
- Type SupportedProvider as explicit string union instead of Record keyof
- Return AnyTextAdapter from adapter factories instead of unknown
- Add isSupportedProvider() type guard for narrowing
- Handle AbortError separately (499 Client Closed Request)
- Accept optional modelOptions for provider-specific config passthrough
- Update spec with DeepWiki research findings and review section

--- a/specs/20260220T200100 ai-plugin.md
+++ b/specs/20260220T200100 ai-plugin.md
@@ -668,3 +668,42 @@ The `openaiText(model)` / `anthropicText(model)` variants auto-detect API keys f
 - `bun run typecheck` — passes clean (0 errors)
 - `bun test src/ai/plugin.test.ts` — 6 tests pass (401, 400, 422, ollama exemption, config restriction, prefix mount)
 - `bun test src/server.test.ts` — 6 existing tests still pass (no regressions)
+
+## Idiomatic Review (DeepWiki Research)
+
+Reviewed against [DeepWiki TanStack/ai](https://deepwiki.com/TanStack/ai) (indexed at commit b4d988) and the official reference implementation in `examples/ts-react-chat/src/routes/api.tanchat.ts` from [TanStack/ai](https://github.com/TanStack/ai).
+
+### What Was Already Correct
+
+1. **`chat()` → `toServerSentEventsResponse()` pipeline** — This is the canonical server-side pattern. All TanStack AI examples (Next.js, TanStack Start, SvelteKit, Express) follow it.
+2. **`AbortController` passed to both `chat()` and `toServerSentEventsResponse()`** — Matches the best practice documented in DeepWiki's "Streaming Response Utilities" and the reference example.
+3. **`systemPrompts` as first-class `chat()` parameter** — Idiomatic. The alternative (prepending a system message to the messages array) is explicitly discouraged.
+4. **`conversationId` passthrough** — Used in the reference example for analytics/debugging.
+5. **Explicit-key adapter factories** — Correct for our per-request key model. The reference example uses env-auto-detect (`openaiText`, `anthropicText`) because it reads keys from env vars, but our architecture sends keys per-request from the client, so `createOpenaiChat(model, apiKey)` is the right choice.
+6. **Try/catch for synchronous provider errors** — Matches the reference's error handling structure.
+
+### Improvements Made
+
+| Issue                                           | Before                                                                                                                                    | After                                                                                                                                            | Source                                                   |
+| ----------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------- |
+| **`SupportedProvider` was `string`**            | `type SupportedProvider = keyof typeof ADAPTER_FACTORIES` where `ADAPTER_FACTORIES` was `Record<string, ...>` — `keyof string` = `string` | Explicit union: `'openai' \| 'anthropic' \| 'gemini' \| 'ollama' \| 'grok'`. Added `isSupportedProvider()` type guard.                           | Type safety best practice                                |
+| **`ADAPTER_FACTORIES` returned `unknown`**      | `Record<string, (model, apiKey) => unknown>`                                                                                              | `Record<SupportedProvider, (model, apiKey) => AnyTextAdapter>` — return type is now the proper TanStack AI adapter type                          | DeepWiki adapter architecture                            |
+| **Missing abort error handling**                | Generic catch returned 502 for all errors including aborts                                                                                | Distinguishes `AbortError` / aborted signal → returns 499 (Client Closed Request). Provider errors still return 502.                             | Reference `api.tanchat.ts` lines 154-156                 |
+| **No `modelOptions` passthrough**               | Endpoint accepted only messages/provider/model/conversationId/systemPrompt                                                                | Added optional `modelOptions` body field, passed through to `chat()`. Enables client to set temperature, thinking budget, reasoning effort, etc. | DeepWiki "Provider-Specific Options" + reference example |
+| **`createAdapter` returned untyped**            | Return type was implicit `unknown`                                                                                                        | Explicit return type `AnyTextAdapter \| undefined`                                                                                               | DeepWiki adapter interface docs                          |
+| **Unused `AnyTextAdapter` import in plugin.ts** | `import { type AnyTextAdapter, chat, ... }` with a cast `as AnyTextAdapter \| undefined` on the adapter                                   | Removed the import and cast — `createAdapter` now returns `AnyTextAdapter \| undefined` directly                                                 | Cleanup after adapters.ts fix                            |
+
+### Patterns We Chose NOT to Adopt
+
+| Pattern                                      | Why Not                                                                                                                                                                                                                                                                                                  |
+| -------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **`createChatOptions()` helper**             | The reference uses it for per-provider type inference on `modelOptions`. Our server receives `modelOptions` as opaque JSON from the client (not statically typed per-provider), so `createChatOptions()` adds no value here. It becomes useful when we have server-side preset configurations (Phase 3). |
+| **`maxIterations()` agent loop strategy**    | We don't support tools yet (deferred to Phase 3). Adding `agentLoopStrategy` without tools is a no-op.                                                                                                                                                                                                   |
+| **Detailed error logging**                   | The reference logs `error.status`, `error.statusText`, `error.code`, `error.type`, `error.stack`. We keep it minimal — the server's consumer will add their own logging/observability layer.                                                                                                             |
+| **`requestSignal` capture before body read** | The reference captures `request.signal` before `await request.json()` to detect early aborts. In Elysia, the body is already parsed by the framework before our handler runs, so this pattern doesn't apply.                                                                                             |
+
+### Verification
+
+- `bun run typecheck` — passes clean (0 errors)
+- `bun test src/ai/plugin.test.ts` — 6 tests pass
+- `bun test src/server.test.ts` — 6 existing tests pass (no regressions)
