docs: add server security specs and standardize ~/.epicenter/ path conventions

--- a/specs/20260115T100800-contract.md
+++ b/specs/20260115T100800-contract.md
@@ -628,7 +628,7 @@ function resolveSchema(schemaId: string): Contract | null {
 }
 ```
 
-**V2 will add:** Filesystem-based user schemas (`~/.epicenter/schemas/{schemaId}.json`)
+**V2 will add:** Filesystem-based user schemas (see path convention note below)
 
 ---
 
@@ -647,16 +647,19 @@ IndexedDB database: "epicenter"
 **V2 (Filesystem/Tauri):**
 
 ```
-~/.epicenter/
-├── data/
-│   └── {workspaceId}-{epoch}.ydoc    # Y.Doc persistence
+<project>/.epicenter/
+├── providers/
+│   ├── persistence/                   # Y.Doc persistence
+│   ├── sqlite/                        # SQLite materialization
+│   └── markdown/                      # Markdown export
 ├── schemas/
 │   └── {schemaId}.json               # User-created schemas
 └── registry.json                      # Local workspace registry
 ```
 
+> **Path convention update (2026-02):** This spec originally proposed `~/.epicenter/` for workspace data. The convention has since been refined: workspace data lives at `<project>/.epicenter/` (project-local), while `~/.epicenter/server/` is reserved for global server config (API keys, master encryption key, server settings). See `specs/20260222T195800-server-side-api-key-management.md` and `docs/articles/home-dotfiles-beat-xdg-for-developer-tools.md` for details.
+
 **Note:** V1 uses IndexedDB only. Filesystem paths are for V2 (Tauri).
-`~` is shorthand; use `os.homedir()` or platform API to resolve.
 
 ---
 
