docs: mark ai-chat-tab and ai-plugin Phase 2 specs as superseded

--- a/specs/20260220T200100 ai-plugin.md
+++ b/specs/20260220T200100 ai-plugin.md
@@ -1,7 +1,8 @@
 # AI Plugin for Epicenter Server
 
 **Date**: 2026-02-20
-**Status**: Draft
+**Status**: Phase 1 Complete, Phase 2 Superseded
+**Superseded**: Phase 2 (client-side integration) was superseded by `specs/20260221T190252-ai-chat-tab.md` and subsequently by the per-conversation architecture in `specs/20260223T195800-background-ai-stream-on-switch.md`. The conceptual `useChat()` + `sseAdapter` client code was never implemented — the actual integration uses `createChat()` + `fetchServerSentEvents()` with per-conversation instances.
 **Author**: AI-assisted
 
 ## Overview
