--- a/specs/20260221T190252-ai-chat-tab.md
+++ b/specs/20260221T190252-ai-chat-tab.md
@@ -1,4 +1,6 @@
 # AI Chat Tab in Tab Manager Extension
+**Status**: Superseded
+**Superseded by**: `specs/20260223T195800-background-ai-stream-on-switch.md` — The original single-instance design, hardcoded model lists, and single-conversation scope have been replaced by multi-conversation support with per-conversation `createChat()` instances, TanStack AI package model imports, and background streaming.
 
 ## TL;DR
 
